# theta-gamma-v4.1

./: .gitignore  GAP_ANALYSIS_REPORT.md  LICENSE
.cursor/: rules.md
.zed/: settings.json
A0/: 00_autonomy_contract.md  01_decision_matrix.csv  02_operating_limits.yaml  03_risk_appetite_profile.md  06_irreversible_decision_registry.csv  07_autonomy_failure_modes.md  99_quality_report.md
A1/: 01_metric_dictionary.yaml  02_gate_definitions.yaml  03_eval_harness_plan.md  04_failure_signals.md  06_golden_dataset_manifest.csv  07_eval_command_contracts.md  99_quality_report.md
A2/: 01_compute_budget_policy.md  02_training_tier_matrix.csv  03_auto_downgrade_rules.md  04_runway_burn_dashboard_spec.md  05_budget_guardrails.yaml  06_compute_exception_policy.md  99_quality_report.md
A3/: 01_compiler_spec.md  02_task_packet_schema.yaml  04_packet_index.csv  05_packet_verification_matrix.csv  06_packet_quality_rubric.md  99_quality_report.md
A3/03_compiled_packets/: PKT-BUDGET-001.md  PKT-BUDGET-002.md  PKT-BUDGET-003.md  PKT-DATA-001.md  PKT-DATA-002.md  PKT-DATA-003.md  PKT-DATA-004.md  PKT-OPS-001.md  (+27 more)
A4/: 01_recovery_state_machine.md  02_retry_policy.yaml  03_incident_templates.md  04_blocker_report_template.md  05_rca_template.md  06_reliability_kpi_targets.csv  99_quality_report.md
A5/: 01_data_access_outreach_templates.md  02_pilot_sow_template.md  03_pilot_scorecard_template.md  04_validation_evidence_checklist.md  05_pre_submission_packet_outline.md  06_evidence_traceability_matrix.csv  07_partner_readiness_checklist.md  99_quality_report.md
A6/: 01_weekly_loop_runbook.md  02_weekly_report_schema.yaml  03_auto_prioritization_rules.md  04_rollforward_rollback_rules.md  05_kpi_trend_tests.md  06_weekly_autonomy_audit.md  99_quality_report.md
A7/: 01_weekly_decision_packet.md  02_top5_decisions_template.md  03_decision_deadline_policy.md  04_default_action_if_no_response.md  05_decision_latency_slo.md  06_default_action_risk_table.csv  99_quality_report.md
python/: README.md  pyproject.toml
python/theta_gamma/: __init__.py
python/theta_gamma/autonomy/: __init__.py  contract.py  failure_modes.py  limits.py  risk_profile.py
python/theta_gamma/cli/: __init__.py  main.py
python/theta_gamma/compiler/: __init__.py  compiler.py  packets.py  quality.py
python/theta_gamma/compute/: __init__.py  budget.py  dashboard.py  downgrade.py  tiers.py
python/theta_gamma/dashboard/: __init__.py  app.py
python/theta_gamma/decisions/: __init__.py  deadlines.py  delivery.py  packets.py
python/theta_gamma/evaluation/: __init__.py  datasets.py  failure_signals.py  gates.py  harness.py  metrics.py
python/theta_gamma/orchestration/: __init__.py  config.py  pipeline.py
python/theta_gamma/persistence/: __init__.py  checkpoints.py  database.py  decision_log.py  metrics_store.py
python/theta_gamma/recovery/: __init__.py  incidents.py  state_machine.py
python/theta_gamma/tests/: __init__.py  test_autonomy.py  test_components.py  test_compute.py  test_evaluation.py  test_orchestration.py  test_phase2.py
python/theta_gamma/training/: __init__.py  checkpointer.py  loop.py  model.py  ray_integration.py
python/theta_gamma/weekly_loop/: __init__.py  prioritization.py  runbook.py
